Trying to resolve margin between pages on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,7 @@ ol.ol-list>li+li {
 #pages img {
     width: 65%;
     margin: 0.2em;
-    /* object-fit: scale-down; */
+    object-fit: contain;
 }
 
 #controls {
